<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.ben.cs496ui.MainActivity">

        <TextView
            android:id="@+id/Layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/text1"
            android:textColor="@color/colorTextPrimaryLight"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/Layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/text2"
            android:textColor="@color/colorTextPrimaryLight"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/Layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/text3"
            android:textColor="@color/colorTextPrimaryLight"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/Layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/text4"
            android:textColor="@color/colorTextPrimaryLight"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/Layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/text5"
            android:textColor="@color/colorTextPrimaryLight"
            android:textSize="45sp" />

    </LinearLayout>
</ScrollView>